--- a/AppleMusicStApp/Player/Player.storyboard
+++ b/AppleMusicStApp/Player/Player.storyboard
@@ -51,7 +51,7 @@
                                     <constraint firstAttribute="height" constant="55" id="C42-YK-O9C"/>
                                     <constraint firstAttribute="width" constant="55" id="Lno-5q-dFM"/>
                                 </constraints>
-                                <state key="normal" title="Button" image="play.fill" catalog="system">
+                                <state key="normal" image="play.fill" catalog="system">
                                     <preferredSymbolConfiguration key="preferredSymbolConfiguration" configurationType="pointSize" pointSize="40"/>
                                 </state>
                             </button>
